// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Checkbox renders 1`] = `
<div
  className="checkbox"
  data-testid="test-renders"
>
  <label
    htmlFor="test-renders"
  >
    <input
      checked={false}
      disabled={false}
      id="test-renders"
      onChange={[Function]}
      type="checkbox"
    />
    Test
  </label>
</div>
`;

exports[`components/Checkbox renders checked 1`] = `
<div
  className="checkbox"
  data-testid="test-checked"
>
  <label
    htmlFor="test-checked"
  >
    <input
      checked={true}
      disabled={false}
      id="test-checked"
      onChange={[Function]}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`components/Checkbox renders disabled 1`] = `
<div
  className="checkbox disabled"
  data-testid="test-disabled"
>
  <label
    htmlFor="test-disabled"
  >
    <input
      checked={false}
      disabled={true}
      id="test-disabled"
      onChange={[Function]}
      type="checkbox"
    />
  </label>
</div>
`;
